# cnc

./: .clinerules  .dprint.jsonc  .gitignore  LICENSE  app.py  graph.js  jest.config.js  license-header.txt  main.py  match_data.csv  mise.toml  next-env.d.ts  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  spec.md  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
.cursor/rules/: main.mdc  react.mdc
.github/workflows/: fetch.yml  publish.yml
app/: page.tsx
app/hive/: HiveThemeWatcher.tsx  Tabs.tsx  layout.tsx  page.tsx  styles.css
app/hive/recent/: page.test.tsx  page.tsx
app/hive/recent/feed.xml/: route.ts
app/maturity/: page.tsx  styles.css
components/: HiveTable.css  HiveTable.tsx  MaturityGraph.tsx  MaturityTable.tsx  RecentGames.tsx
components/ui/: badge.tsx  button.tsx  scroll-area.tsx  table.tsx  tabs.tsx  tooltip.tsx
data/: hive.toml  hive_games_cache.json  maturity-players.toml  maturity.csv
examples/: ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  complete_demo.py  want_example.sh  want_programmatic.py  want_workflow.md
lib/: basePath.ts  colors.ts  graph.css  graphDrawing.ts  hiveData.ts  hiveRecent.ts  maturityLogic.ts
public/data/: maturity-players.toml
scripts/: dev_server.py  validate_schema.py
src/cnc/: fetch_hive_games.py  graph.py  hive.py  hivegame.py  main.py  maturity.py  maturity_ratings.py  utils.py
src/cnc/hive/: config.py  database.py  fetch_hive_games.py  games_data.py  hivegamecom.py  html_generator.py  html_generator_react.py  player_ids.py  schema.sql  table_generator.py  table_generator_react.py
src/cnc/want/: README.md  __init__.py  __main__.py  cli.py  plan.py  requirements.py
styles/: globals.css
templates/: hive-react.html.j2  hive.html.j2  index.html.j2
tests/: demo_want.py  test_cli_execution.py  test_cli_manual.py  test_want.py
