[project]
name = "cnc"
version = "0.1.0"
description = ""
requires-python = ">=3.13"
dependencies = [
    "babel>=2.17.0",
    "cbor2>=5.7.0",
    "duckdb>=1.3.2",
    "flask>=3.1.1",
    "pathspec>=0.12.1",
    "polars>=1.32.3",
    "psutil>=7.0.0",
    "pyarrow>=21.0.0",
    "pydantic>=2.11.7",
    "requests>=2.31.0",
    "rich>=14.1.0",
    "structlog>=25.4.0",
    "tomli>=2.2.1",
    "watchdog>=6.0.0",
]

[project.scripts]
cnc-build = "cnc.main:build_and_exit"
cnc-dev = "cnc.main:app"

[dependency-groups]
dev = ["pyright>=1.1.404"]

[tool.pyright]
include = ["src", "scripts"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
lint.ignore = ["F541"]
