[project]
name = "cnc"
version = "0.1.0"
description = ""
license = { text = "CC0-1.0" }
requires-python = ">=3.13"
classifiers = [
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "cbor2>=5.7.0",
    "duckdb>=1.3.2",
    "polars>=1.32.3",
    "pydantic>=2.11.7",
    "requests>=2.31.0",
    "structlog>=25.4.0",
]

[dependency-groups]
dev = ["pyright>=1.1.404"]

[tool.pyright]
include = ["src", "scripts"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
lint.ignore = ["F541"]
